force-app/main/default/objects/Reference__c/fields/AppUId__c.field-meta.xml
<CustomField>
    <fullName>AppUId__c</fullName>
    <label>AppUId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>