force-app/main/default/objects/Reference__c/fields/last_name__c.field-meta.xml
<CustomField>
    <fullName>last_name__c</fullName>
    <label>last_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>