force-app/main/default/objects/Reference__c/fields/Reference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reference_Notes__c</fullName>
    <label>Reference Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>