force-app/main/default/objects/Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Application__c</columns>
    <columns>NAME</columns>
    <columns>AppUId__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>first_name__c</columns>
    <columns>last_name__c</columns>
    <columns>email__c</columns>
    <columns>phone__c</columns>
    <columns>Reference_Notes__c</columns>
    <columns>Relationship__c</columns>
    <columns>Reference_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>